# rust-web-app

./: .gitignore  Cargo.toml  DESIGN.md  README.md  bacon.toml  notes.txt
.sqlx/: query-00bdbb2ca9aa807be17962ee829ec94198bab1df0d487d30438cad824a982ad3.json  query-22870e1502baf1e97384594ebd6488df4909de014b53b8469a60e2dd2391782a.json  query-3e82d6cff7c728ab327f48763db5361da2020005704eb283305582d0ebd36d4d.json  query-53668249355518597b9944c6346be1fa63b856bf8cd844d68e5160f7d2c11813.json  query-a3d9e02d56e82b79e65f4e922d8d7927090922daa9fedfb9b0e4bc855c4c4a45.json  query-a831247b47301acd9dbd9b57c313b6107048094840e3bfa8ea464c937c57facc.json  query-b91899752ba775aee4ebca437f3b20b4551092ba5d90f597f717491dd116fd44.json  query-c568143efd5c5401a0a7c5ee79c7b408a5e644eb7d528b59856db65db29442e7.json  query-d54d46685fd03c0dc6900a817df58dd90aa26a30254ea50615a7a8633f547bfe.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-f6ec2ef8e3d475602e031b41bce02872a0393162de0d1071d80b2df8610e2f32.json  query-f7d8b573ec3b3ac229d77643776080b575ce35cdc0dca189140bc478fc197153.json
database/: create-tables.sql
frontend/stocked/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/stocked/api/: stocks.ts
frontend/stocked/api/hooks/: getAuthSessions.ts  useFetch.ts
frontend/stocked/api/types/: schema.ts
frontend/stocked/app/: globals.css  layout.tsx  page.tsx
frontend/stocked/app/auth/login/: page.tsx
frontend/stocked/app/auth/register/: page.tsx
frontend/stocked/app/components/: Header.tsx  HeaderProfile.tsx  Navbar.tsx  Profile.tsx  StockEntry.tsx  Stocks.tsx
frontend/stocked/app/login/: page.tsx
frontend/stocked/app/me/: layout.tsx
frontend/stocked/app/me/stocks/: page.tsx
frontend/stocked/app/stocks/: layout.tsx  page.tsx
frontend/stocked/app/stocks/[id]/: layout.tsx  (+1 more)
frontend/stocked/types/: types.ts
frontend/stocked/utils/: fetcher.ts
migrations/: 0002_ADD_DUMMY_DATA.sql  1_setup.sql
scripts/: _start.ps1  download_stocks.py  start.py
src/: error.rs  lib.rs  logger.rs  main.rs  prelude.rs
src/config/: error.rs  mod.rs
src/controller/: error.rs  mod.rs
src/controller/auth/: error.rs  mod.rs  password_policy.rs
src/controller/stocks/: error.rs  mod.rs
src/database/: error.rs  mod.rs  types.rs
tests/: API-test.http  main.rs
tests/config/: main.rs  mod.rs
tests/controller/: mod.rs
tests/controller/auth/: mod.rs
