[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
dotenvy = "0.15.7"
# dotenv = "0.15.0" => That is not maintained anymore.
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "derive",
    'chrono',
    # 'time',

    # "json" => Add support for JSON and JSONB (in postgres) using the serde_json crate.
    # "migrate",
    # "chrono",
] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# [[bin]]
# name = "client"
# path = "src/bin/client.rs"

# [[bin]]
# name = "server"
# path = "src/bin/server.rs"

[dev-dependencies]
tempfile = "3.21.0"
